[build-system]
# Defined by PEP 518:
# use oldest-supported-numpy (https://github.com/pypa/pip/issues/9542#issuecomment-771200755)
requires = [
    # for building Cython extensions
    "cython", "oldest-supported-numpy", "setuptools", "wheel",
    # for version management
    "setuptools>=45", "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "dclab"
authors = [
    {name = "Paul Müller", email="dev@craban.de"},
]
description = "Library for real-time deformability cytometry (RT-DC)"
readme = "README.rst"
requires-python = ">=3.8, <4"
keywords = ["RT-DC", "deformability", "cytometry"]
classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Visualization',
    'Intended Audience :: Science/Research',
]
license = {"file" = "LICENSE"}
dependencies = [
    "h5py>=3.0.0",
    "hdf5plugin>=3.3.1",
    "numpy>=1.21",  # CVE-2021-33430
    "scipy>=1.8.0",  # deprecations in older versions
]
dynamic = ["version"]

[project.optional-dependencies]
all = ["dclab[dcor,export,lme4,ml,s3,tdms]"]
dcor = ["requests"]
export = ["fcswrite>=0.5.0",  # fcs export
          "imageio[ffmpeg]",  # avi export
]
lme4 = ["rpy2>=2.9.4"]
ml = ["tensorflow>=2.0"]
s3 = ["s3fs"]
tdms = ["imageio[ffmpeg]", "nptdms>=0.23.0"]


[project.scripts]
dclab-compress = "dclab.cli:compress"
dclab-condense = "dclab.cli:condense"
dclab-join = "dclab.cli:join"
dclab-repack = "dclab.cli:repack"
dclab-split = "dclab.cli:split"
dclab-tdms2rtdc = "dclab.cli:tdms2rtdc [tdms]"
dclab-verify-dataset = "dclab.cli:verify_dataset"

[project.urls]
homepage = "https://github.com/DC-Analysis/dclab"
documentation = "https://dclab.readthedocs.io/en/stable/"
changelog = "https://dclab.readthedocs.io/en/stable/sec_changelog.html"

[tool.setuptools]
packages = ["dclab"]

[tool.setuptools_scm]
write_to = "dclab/_version.py"
version_scheme = "post-release"
